2002-04-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Resources/GNUmakefile: install new language files.
	* Resources/Languages/Russion: language file added.
	* Resources/Languages/UkraineRussion: language file added.
	Added language files provided by Serg Stoyan <stoyan@on.com.ua>
	* Source/UnixFileHandle.m: Permit accept/connect on descriptors
	by default.
	* Source/WindowsFileHandle.m: ditto

2002-04-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Tidy initialisers for case where the default
	C-string encoding is not usable internally.
	* Source/NSLog.m: Try default cString encoding.
	* Tools/cvtenc.m: Add -EscapeIn and -EscapeOut flags to handle \u
	escapes in files.
	* Resources/Languages/Italian: Correct to use \u escapes
	* Resources/Languages/French: ditto.
	* Resources/Languages/German: ditto.
	* Resources/Languages/README: New file to tell editors that they
	should use \u escapes ... and suggesting use of the cvtenc tool
	to make the job easy.

2002-04-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix error in unicode BOM handling
	Write plist unicode escapes using the conventional \u rather than \U,
	but read in either form.
	* Source/GSString.m: Fix error in length of unicode data produced.
	* Tools/cvtenc.m: Made easy to use and added instructions.

Sat Apr  6 02:42:43 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSUser.m (NSSearchPathForDirectoriesInDomains): Fixed
	typo, gnustep_local_root being used instead of gnustep_user_root
	for developer dirs in user root.
	
2002-04-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fix locking bug with NSZombie ... was not
	locking when adding/removing zombies.
	* Source/NSString.m: Fix property list parsing code to raise
	exceptions on failure rather than logging messages.  Also check for
	extra data at end of parsed string.
	* Tools/ctvenc.m: new tool for converting string encodings.

2002-03-28  Manuel Guesdon <mguesdon@orange-concept.com>
